--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Go666</title>
+    <title>Go66</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
    <link rel="shortcut icon"  href="images/logo.ico">
@@ -24,6 +24,10 @@
     	body{
     		min-width: 1200px;
     		height: 100%;
+    		background-image: url(images/bg.gif);
+    		background-repeat: no-repeat;
+    		background-size: 1920px 1080px;
+    		background-position: center;
     	}
     	#content{
     		overflow: hidden;
@@ -50,15 +54,16 @@
     		float: left;
     		width: 150px;
     		height: 30px;
+    		border: 1px solid red;
     		margin: 0 20px 30px 0;
     		background-color: #000;
     		border-radius: 10px;
-    		box-shadow: 3px 3px 5px #828282;
+    		box-shadow: 3px 3px 5px #881515;
     		animation-delay: 3s;
     	}
     	a{	
     		display: block;
-    		color: #fff;
+    		color: skyblue;
     		text-align: center;
     		line-height: 30px;
     		text-decoration: none;
