--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
     	body{
     		min-width: 1200px;
     		height: 100%;
-    		background-image: url(images/bg.gif);
+    		background-image: url(images/bg2.jpg);/*
+    		background-image: url(images/bg.gif);*/
     		background-repeat: no-repeat;
-    		background-size: 1920px 1080px;
+    		background-size: 100%;
     		background-position: center;
     	}
     	#content{
