--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     	body{
     		min-width: 1200px;
     		height: 100%;
-    		background-image: url(images/bg2.jpg);/*
-    		background-image: url(images/bg.gif);*/
+    		background-image: url(images/bg2.jpg);
+    		background-image: url(images/bg.gif);
     		background-repeat: no-repeat;
     		background-size: 100%;
     		background-position: center;
