--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Go66</title>
+    <title>Go66-萌小白</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
-   <link rel="shortcut icon"  href="images/logo.ico">
+   <link rel="shortcut icon"  href="images/favicon.ico">
     <style type="text/css">
     	*{
     		margin: 0;
@@ -44,9 +44,11 @@
     		border-radius: 10px;
     		line-height: 50px;
     		font-size: 2em;
+    		color: #fff;
     		text-align: center;
     		margin-bottom: 50px;
     		font-weight: bold;
+    		opacity: 0.7;
     	}
     	ul{
     		width: 110%;
@@ -57,23 +59,27 @@
     		height: 30px;
     		border: 1px solid red;
     		margin: 0 20px 30px 0;
-    		background-color: #000;
     		border-radius: 10px;
     		box-shadow: 3px 3px 5px #881515;
-    		animation-delay: 3s;
+			transition: 2s;
     	}
     	a{	
     		display: block;
-    		color: skyblue;
+    		color: #fff;
     		text-align: center;
     		line-height: 30px;
     		text-decoration: none;
     		
     	}
     	ul li:hover{
-			background-color: orange;
-			transition: 2s;
+    		border:1px solid #B23AEE;
+			background-color: #fff;
+			box-shadow:  3px 3px 5px #B23AEE;
+			opacity: 0.7;
 			transform: translate3d(5px,1px,0px);
+    	}
+    	a:hover{
+    		color: #000;
     	}
     </style>
 </head>
@@ -82,7 +88,7 @@
 		<p>实验作业</p>
 	    <ul class="click">
 	    	<li><a href ="优-02-萌小白.html" target="_blank">优-02-萌小白</a></li>
-	    	<li><a href ="1.html">第一次作业</a></li>
+	    	<li><a href ="03.html">问-03-萌小白</a></li>
 	    	<li><a href ="2.html">第二次作业</a></li>
 	    	<li><a href ="">第三次作业</a></li>
 	    	<li><a href ="">第四次作业</a></li>
