--- a/03.html
+++ b/03.html
@@ -14,6 +14,9 @@
     		list-style: none;
     		user-select: none;
     	}
+    	body{
+    		background-color: #000;
+    	}
     	#warp{
     		position: relative;
 			width: 600px;
@@ -29,15 +32,22 @@
     	}
     	input{
     		width: 400px;
-    		height: 30px;
-    		font-size: 20px;
+    		height: 34px;
+    		border:0;
+    		text-indent: 5px;
+    		font-size: 16px;
+    		outline: 0;
     	}
+    	/*input:focus,button:focus{
+    		outline: 0;
+    	}*/
     	button{
     		position: absolute;
-    		top: 7px;
+    		top: 8px;
     		width: 80px;
     		height: 34px;
     		border:0;
+    		outline: 0;
     	}
     	#list{
     		width: 500px;
@@ -48,6 +58,7 @@
     		width: 100%;
     		padding-top: 10px;
     		border-bottom: 1px dashed #ccc;
+    		color: #fff;
     		font-size: 18px;
     	}
     </style>
