--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	    	<li><a href ="优-02-萌小白.html" target="_blank">优-02-萌小白</a></li>
 	    	<li><a href ="03.html" target="_blank">问-03-萌小白</a></li>
 	    	<li><a href ="flie/04.html" target="_blank">04-萌小白</a></li>
-	    	<li><a href ="" target="_blank">第三次作业</a></li>
+	    	<li><a href ="flie/05.html" target="_blank">05-萌小白</a></li>
 	    	<li><a href ="" target="_blank">第四次作业</a></li>
 	    	<li><a href ="" target="_blank">第五次作业</a></li>
 	    	<li><a href ="" target="_blank">第六次作业</a></li>
