--- a/flie/06.html
+++ b/flie/06.html
@@ -17,29 +17,6 @@
 </head>
 <body>
     
-    <div id="box"></div>
+    <button title="666">dasfsda</button>
 </body>
-	<script type="text/javascript">
-		
-
-
-		let ob = document.getElementById("box");
-
-		let bool = 1;
-		ob.onclick = function(){
-		if (bool) {
-
-			ob.style.cssText = "height: 500px; transition: 0.5s";
-
-			bool = 0;
-		}else{
-
-			ob.style.cssText = "height: 100px; transition: 0.5s;"
-
-			bool = 1;
-		}
-		
-	}
-
-	</script>
 </html>
