--- a/flie/05.html
+++ b/flie/05.html
@@ -6,7 +6,7 @@
     <title>05-萌小白</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <link href="" rel="stylesheet">
+    <link rel="shortcut icon" href="../images/logo.ico">
     <style type="text/css">
     *{
     	margin:0;
@@ -34,16 +34,24 @@
         border-radius: 50%;
         vertical-align: middle;
     }
+
+    /*输入框*/
     #warp .main #footer input{
         width: 182px;
         height: 22px;
+        outline: none;
+        border: 0;
+        border-bottom: 1px solid #6F6F6F;
 
     }
     #warp .main #footer #btn{
         position: absolute;
         top: 2px;
+        right: 2px;
         display: inline-block;
         height: 26px;
+        border-radius: 10px;
+        outline: none;
     }
     #warp  #footer{
         position: absolute;
@@ -82,6 +90,7 @@
         border-radius: 10px;
         background-color: #ccc;
         font-size: 14px;
+        word-break:break-all;
     }
     </style>
 </head>
@@ -95,9 +104,9 @@
             <div id="footer">
                 <img src="../images/1.jpg">
                 <input type="text" id="txt">
-                <button value id="btn">发送</button>
+                <button value id="btn" title="点我发送">发送</button>
             </div>
-            <div id="click">+</div>
+            <div id="click" title="点我啊">+</div>
         </div>
     </div>
 </body>
