--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	    	<li><a href ="03.html" target="_blank">问-03-萌小白</a></li>
 	    	<li><a href ="flie/04.html" target="_blank">04-萌小白</a></li>
 	    	<li><a href ="flie/05.html" target="_blank">05-萌小白</a></li>
-	    	<li><a href ="" target="_blank">第四次作业</a></li>
+	    	<li><a href ="flie/06.html" target="_blank">问-06-萌小白</a></li>
 	    	<li><a href ="" target="_blank">第五次作业</a></li>
 	    	<li><a href ="" target="_blank">第六次作业</a></li>
 	    	<li><a href ="" target="_blank">第七次作业</a></li>
