--- a/flie/05.html
+++ b/flie/05.html
@@ -147,7 +147,7 @@
     obtn.onclick = function(){
 
 
-        if (otxt.value.length == 0) {
+        if (otxt.value.length === 0) {
             alert("内容不能为空");
         }else if(otxt.value.length > 0){
 
@@ -155,6 +155,7 @@
             otxt.value = "";
         }
     }
+
 
 </script>
 </html>
