--- a/flie/06.html
+++ b/flie/06.html
@@ -88,6 +88,7 @@
     </style>
 </head>
 <body>
+	<span style="color:red;display:block;width:406px;background-color: #000;margin: 50px auto;">问：第一次循环2345张图片不显示，第二次循环才显示。</span>
     	<div id="content">
     		<ul>
     			<li><img src="../images/06/1.jpg"></li>
