--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 	    	<li><a href ="flie/05.html" target="_blank">05-萌小白</a></li>
 	    	<li><a href ="flie/06.html" target="_blank">问-06-萌小白</a></li>
 	    	<li><a href ="flie/07.1.html" target="_blank">07-1-萌小白</a></li>
-	    	<li><a href ="" target="_blank">第六次作业</a></li>
-	    	<li><a href ="" target="_blank">第七次作业</a></li>
+	    	<li><a href ="flie/07.2.html" target="_blank">07-2-萌小白</a></li>
+	    	<li><a href ="flie/07.3.html" target="_blank">07-3-萌小白</a></li>
 	    	<li><a href ="" target="_blank">第八次作业</a></li>
 	    	<li><a href ="" target="_blank">第九次作业</a></li>
 	    	<li><a href ="" target="_blank">第十次作业</a></li>
