--- a/flie/07.2.html
+++ b/flie/07.2.html
@@ -25,6 +25,7 @@
     		width: 100%;
     		height: 49px;
     		border-bottom: 1px dotted #000;
+    		outline: none;
     	}
     	p{
     		line-height: 49px;
