--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	    	<li><a href ="flie/07.1.html" target="_blank">07-1-萌小白</a></li>
 	    	<li><a href ="flie/07.2.html" target="_blank">07-2-萌小白</a></li>
 	    	<li><a href ="flie/07.3.html" target="_blank">07-3-萌小白</a></li>
-	    	<li><a href ="" target="_blank">第八次作业</a></li>
+	    	<li><a href ="flie/08.html" target="_blank">12-萌小白</a></li>
 	    	<li><a href ="" target="_blank">第九次作业</a></li>
 	    	<li><a href ="" target="_blank">第十次作业</a></li>
 	    	<li><a href ="" target="_blank">第十一次作业</a></li>
